# voicebot-app

./: .gitignore  README.md  app.py  main.py  pyproject.toml
src/agent/: hf_llm.py  llm.py
src/agent/base/: base_llm.py
